--- a/frontend/public/style/_overrides.scss
+++ b/frontend/public/style/_overrides.scss
@@ -374,8 +374,9 @@ button.pf-v5-c-dropdown__menu-item.pf-m-disabled {
   pointer-events: auto;
 }
 
-#modal-container .pf-v5-c-backdrop {
-  position: absolute !important;
+#modal-container.pf-v5-c-backdrop__open {
+  // PatternFly sets `overflow: hidden` which is problematic when using appendTo in <Modal>
+  overflow: visible !important;
 }
 
 .form-group--doubled-bottom-margin {
